@@ -1,4 +1,5 @@
 2016-04-11
+- align numeric columns on right
 - show warning when selecting google drive folder as save path
 - back background permission optional permission
 - update styles, colors
